- removed unnecessary endpoint user dependency checks - added manual token checks within get_current_user - added custom HTTP Error exceptions - added custom response body codes - added todo tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,12 +23,10 @@ explicit_package_bases = true
 
 [tool.pytest.ini_options]
 minversion = "9.0"
-testpaths = [
-    "project_3/TodoApp/test"]
+testpaths = ["project_3/TodoApp/test"]
 markers = [
     "unit: fast, isolated unit tests",
     "api: API / integration tests",
     "db: tests that touch the database",
-    "slow: slow-running tests",
 ]
 addopts = ["--strict-markers", "-ra", "--tb=auto"]
